# Phoenix-AI-Coder

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  app_old.py  pyproject.toml
src/phoenix/: crew.py  main.py
src/phoenix/config/: agents.yaml  tasks.yaml
src/phoenix/tools/: custom_tool.py
