[project]
name = "phoenix"
version = "0.1.0"
description = "phoenix using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.0,<1.0.0",
    "langchain-google-genai>=2.1.12",
    "streamlit>=1.49.1",
]

[project.scripts]
phoenix = "phoenix.main:run"
run_crew = "phoenix.main:run"
train = "phoenix.main:train"
replay = "phoenix.main:replay"
test = "phoenix.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
